--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "webhook-server",
+  "version": "1.0.0",
+  "description": "Simple webhook server",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^4.18.2"
   }
 }
